<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/common_padding_min"
    app:cardCornerRadius="@dimen/common_padding_min"
    android:layout_marginHorizontal="@dimen/common_padding_min"
    android:layout_marginVertical="@dimen/common_padding_min"
    android:id="@+id/containerAdCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvApplication"
            android:layout_width="@dimen/common_padding_none"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody1"
            android:padding="@dimen/common_padding_min"
            android:textStyle="bold"
            tools:text="@string/app"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/icExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_warning"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintEnd_toStartOf="@id/icDelete"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ad"/>

        <ImageButton
            android:id="@+id/icDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:background="@drawable/round_corner"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginEnd="@dimen/common_padding_min_xs"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvApplication"
            android:contentDescription="@string/ad_removed"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/moreInformation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tvApplication"
                android:clickable="true"
                android:focusable="true">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min_xs"
                    android:padding="@dimen/common_padding_min_xs"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/id" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min_xs"
                    android:padding="@dimen/common_padding_min_xs"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvClassification"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/city" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvClassification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_padding_min_xs"
                    android:padding="@dimen/common_padding_min_xs"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/classification" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min_xs"
                    android:padding="@dimen/common_padding_min_xs"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvId"
                    tools:text="@string/phone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_padding_min_xs"
                    android:padding="@dimen/common_padding_min_xs"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCity"
                    tools:text="@string/device" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>