<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/common_padding_default"
    app:cardElevation="@dimen/common_padding_middle"
    android:id="@+id/containerHostLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_url"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginTop="@dimen/common_padding_min_xs"
            android:textColor="@color/black"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginVertical="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/common_padding_none"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/cancel"
                android:paddingHorizontal="@dimen/common_padding_middle"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                app:cornerRadius="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@+id/tilName"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                android:layout_width="@dimen/common_padding_none"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:paddingHorizontal="@dimen/common_padding_middle"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                app:cornerRadius="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@+id/tilName"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>