<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/containerRecordCard"
    app:cardElevation="@dimen/common_padding_min"
    app:cardCornerRadius="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textRecord"
            android:layout_width="@dimen/common_padding_none"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody1"
            android:padding="@dimen/common_padding_min"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/record"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/icClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            android:padding="@dimen/common_padding_min_xs"
            android:background="@drawable/round_corner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textRecord"
            android:contentDescription="@string/clean" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textChats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            app:layout_constraintEnd_toStartOf="@+id/tvChats"
            app:layout_constraintTop_toBottomOf="@+id/textRecord"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvChats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:layout_marginEnd="@dimen/common_padding_min_xs"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textChats"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_padding_none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textChats"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>