<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recordContainer"
    android:layout_marginTop="@dimen/common_padding_min"
    android:layout_marginBottom="@dimen/common_padding_min_xs"
    android:layout_marginHorizontal="@dimen/common_padding_min"
    app:cardElevation="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody1"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="@dimen/common_padding_min"
            android:textStyle="bold"
            android:text="@string/record"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/btnOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_cleaning"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginStart="@dimen/common_padding_min_xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRecord"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            app:layout_constraintStart_toEndOf="@+id/textNotification"
            app:layout_constraintTop_toBottomOf="@+id/textRecord"
            android:textStyle="bold"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryDarkColor"
            app:layout_constraintTop_toBottomOf="@id/tvCounter"
            android:layout_margin="@dimen/common_padding_min"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            tools:listitem="@layout/phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>