<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/adContainer"
    android:layout_marginTop="@dimen/common_padding_min"
    android:layout_marginBottom="@dimen/common_padding_min_xs"
    android:layout_marginHorizontal="@dimen/common_padding_min"
    app:cardElevation="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvApplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody1"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="@dimen/common_padding_min"
            android:textStyle="bold"
            android:text="@string/whatsapp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/icExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_warning"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintEnd_toStartOf="@+id/btnOptions"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/btnOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_more"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginStart="@dimen/common_padding_min_xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvApplication"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginEnd="@dimen/common_padding_min_xs"
            app:layout_constraintStart_toEndOf="@+id/tvCity"
            app:layout_constraintTop_toBottomOf="@+id/tvApplication"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="6644794560"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginEnd="@dimen/common_padding_min_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvApplication"
            android:textStyle="bold"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/tvCategory"
            android:layout_margin="@dimen/common_padding_min"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textLastPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_chat"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginStart="@dimen/common_padding_min_xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            app:layout_constraintEnd_toStartOf="@+id/tvCounter"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryDarkColor"
            android:textAppearance="?attr/textAppearanceBody2"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginEnd="@dimen/common_padding_min_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLastPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/without_registration"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceCaption"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginStart="@dimen/common_padding_min_xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLastPhone"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDateLastPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15 Mayo 2022"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceCaption"
            android:padding="@dimen/common_padding_min_xs"
            android:layout_marginEnd="@dimen/common_padding_min_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLastPhone"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/common_padding_min_xs"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/secondaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateLastPhone"
            tools:text="Mensaje"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>